--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -353,7 +353,11 @@
         },
         "language": {
             "prefix": "Your language:"
-        }
+        },
+        "nav_aria_label": "Main menu",
+        "skip_links": "Go directly to:",
+        "skip_links_aria_label": "Go directly to: Main Content",
+        "skip_links_content": "Main Content"
     },
     "auth_start": {
         "example": "Enter a valid email address, for example <strong>naam@voorbeeld.com</strong>"
@@ -459,11 +463,8 @@
             "sort": "Sort",
             "payment_option_qr": "Show QR code at the provider",
             "payment_option_reservation": "Online booking",
-            "payment_options": "Payment options",
-            "payment_options_info": "Learn more about payment options",
             "price": "Price (€)",
             "price_from": "From",
-            "price_to": "To",
             "payment_option_extra_payment": "Online additional payment with iDeal",
             "price_type_option_discount_fixed": "Discount in euro",
             "price_type_option_discount_percentage": "Discount in percent",
@@ -472,7 +473,10 @@
             "price_type_option_regular": "Price",
             "price_type_options": "Type of offer",
             "price_type_options_info": "Read more about the types of offerings",
-            "category": "Categories"
+            "category": "Categories",
+            "payment_options": "Payment options",
+            "payment_options_info": "Learn more about payment options",
+            "price_to": "To"
         },
         "sort": {
             "created_at_asc": "Oldest first",
@@ -1340,7 +1344,8 @@
             "phone": "Phone number:",
             "title": "Provider information",
             "type": "Type of provider:",
-            "type_none": "No provider type"
+            "type_none": "No provider type",
+            "map_icon": "Establishment icon"
         },
         "funds": {
             "title": "Branches"
@@ -2055,11 +2060,13 @@
         "push_notifications_dismiss_time": {
             "bookmarks": {
                 "description": "Hide system notifications automatically after favorite products are added or deleted.",
-                "title": "Close notifications about favorite products automatically"
+                "title": "Close notifications about favorite products automatically",
+                "label": "Select the time in seconds that system notifications concerning favorite products are closed after an action is performed."
             },
             "webshop": {
                 "description": "Hide system notifications automatically after an action is performed.",
-                "title": "General notifications automatically close"
+                "title": "General notifications automatically close",
+                "label": "Select the time in seconds that automatic system notifications are closed after an action is performed."
             }
         },
         "push_notifications_preferences": {
@@ -2639,7 +2646,11 @@
         },
         "me_app_more_info": "Learn more about the Me app",
         "provider_sign_up": "Register as a provider",
-        "sponsor_logo_alt": "Sponsor logo"
+        "sponsor_logo_alt": "Sponsor logo",
+        "copyright_aria_label": "Conditions and statements",
+        "footer_aria_label": "Footer",
+        "me_app_aria_label": "Information about downloading the Me app",
+        "nav_provider_aria_label": "Register as a provider"
     },
     "block_funds": {
         "labels": {
@@ -2734,7 +2745,6 @@
             "notifications": "Notifications",
             "payouts": "Payouts",
             "profile": "Data",
-            "records": "Personal data",
             "reimbursements": "Cost recovery",
             "reservations": "Reservations",
             "security": "Security",
@@ -3568,7 +3578,9 @@
             "select_option": "Select option"
         },
         "range_control": {
-            "aria_value": "Value {{prefix}}{{value}} , minimum value {{prefix}}{{min}} , maximum value {{prefix}}{{max}}"
+            "aria_value": "Value {{prefix}}{{value}} , minimum value {{prefix}}{{min}} , maximum value {{prefix}}{{max}}",
+            "first_slider_aria_label": "Slider for minimum price",
+            "second_slider_aria_label": "Slider for maximum price"
         }
     },
     "modal_deactivate_voucher": {
