--- a/react/src/webshop/i18n/translated/fr.json
+++ b/react/src/webshop/i18n/translated/fr.json
@@ -123,7 +123,11 @@
         },
         "me_app_more_info": "En savoir plus sur l'application Me",
         "provider_sign_up": "S'inscrire en tant que fournisseur",
-        "sponsor_logo_alt": "Logo du sponsor"
+        "sponsor_logo_alt": "Logo du sponsor",
+        "copyright_aria_label": "Conditions et déclarations",
+        "footer_aria_label": "Pied de page",
+        "me_app_aria_label": "Informations sur le téléchargement de l'application Me",
+        "nav_provider_aria_label": "S'inscrire en tant que fournisseur"
     },
     "auth_start": {
         "example": "Saisissez une adresse électronique valide, par exemple <strong>naam@voorbeeld.com</strong>"
@@ -2075,11 +2079,13 @@
         "push_notifications_dismiss_time": {
             "bookmarks": {
                 "description": "Masquer automatiquement les notifications du système après l'ajout ou la suppression de produits favoris.",
-                "title": "Fermer automatiquement les notifications concernant les produits favoris"
+                "title": "Fermer automatiquement les notifications concernant les produits favoris",
+                "label": "Sélectionnez la durée en secondes pendant laquelle les notifications du système concernant les produits favoris sont fermées après l'exécution d'une action."
             },
             "webshop": {
                 "description": "Masquer automatiquement les notifications du système après l'exécution d'une action.",
-                "title": "Fermeture automatique des notifications générales"
+                "title": "Fermeture automatique des notifications générales",
+                "label": "Sélectionnez le délai en secondes pendant lequel les notifications automatiques du système sont fermées après l'exécution d'une action."
             }
         },
         "push_notifications_preferences": {
@@ -2348,11 +2354,8 @@
             "sort": "Trier",
             "payment_option_qr": "Afficher le code QR au fournisseur",
             "payment_option_reservation": "Réserver en ligne",
-            "payment_options": "Options de paiement",
-            "payment_options_info": "En savoir plus sur les options de paiement",
             "price": "Prix (€)",
             "price_from": "De",
-            "price_to": "Pour",
             "payment_option_extra_payment": "Payer en ligne avec iDeal",
             "price_type_option_discount_fixed": "Remise en euros",
             "price_type_option_discount_percentage": "Remise en pourcentage",
@@ -2361,7 +2364,10 @@
             "price_type_option_regular": "Prix",
             "price_type_options": "Type d'offre",
             "price_type_options_info": "En savoir plus sur les types d'offres",
-            "category": "Catégories"
+            "category": "Catégories",
+            "payment_options": "Options de paiement",
+            "payment_options_info": "En savoir plus sur les options de paiement",
+            "price_to": "Pour"
         },
         "sort": {
             "created_at_asc": "Le plus vieux d'abord",
@@ -2390,7 +2396,6 @@
             "notifications": "Notifications",
             "payouts": "Paiements",
             "profile": "Données",
-            "records": "Données personnelles",
             "reimbursements": "Recouvrement des coûts",
             "reservations": "Réservations",
             "security": "Sécurité",
@@ -2490,7 +2495,8 @@
             "phone": "Numéro de téléphone :",
             "title": "Informations sur le fournisseur",
             "type": "Type de prestataire :",
-            "type_none": "Pas de type de fournisseur"
+            "type_none": "Pas de type de fournisseur",
+            "map_icon": "Icône d'établissement"
         },
         "funds": {
             "title": "Branches"
@@ -3239,7 +3245,11 @@
         },
         "language": {
             "prefix": "Votre langue :"
-        }
+        },
+        "nav_aria_label": "Menu principal",
+        "skip_links": "Aller directement à :",
+        "skip_links_aria_label": "Aller directement à : Contenu principal",
+        "skip_links_content": "Contenu principal"
     },
     "voucher_printable": {
         "budget_voucher": {
@@ -3568,7 +3578,9 @@
             "select_option": "Sélectionner une option"
         },
         "range_control": {
-            "aria_value": "Valeur {{prefix}}{{value}} , valeur minimale {{prefix}}{{min}} , valeur maximale {{prefix}}{{max}}"
+            "aria_value": "Valeur {{prefix}}{{value}} , valeur minimale {{prefix}}{{min}} , valeur maximale {{prefix}}{{max}}",
+            "first_slider_aria_label": "Curseur pour le prix minimum",
+            "second_slider_aria_label": "Curseur pour le prix maximum"
         }
     },
     "modal_deactivate_voucher": {
