--- a/react/src/webshop/i18n/translated/tr.json
+++ b/react/src/webshop/i18n/translated/tr.json
@@ -422,11 +422,8 @@
             "sort": "Sırala",
             "payment_option_qr": "QR kodunu sağlayıcıda göster",
             "payment_option_reservation": "Online rezervasyon",
-            "payment_options": "Ödeme seçenekleri",
-            "payment_options_info": "Ödeme seçenekleri hakkında daha fazla bilgi edinin",
             "price": "Fiyat (€)",
             "price_from": "Kimden",
-            "price_to": "için",
             "payment_option_extra_payment": "iDeal ile çevrimiçi ödeme",
             "price_type_option_discount_fixed": "Euro cinsinden indirim",
             "price_type_option_discount_percentage": "Yüzde olarak indirim",
@@ -435,7 +432,10 @@
             "price_type_option_regular": "Fiyat",
             "price_type_options": "Teklif türü",
             "price_type_options_info": "Teklif türleri hakkında daha fazla bilgi edinin",
-            "category": "Kategoriler"
+            "category": "Kategoriler",
+            "payment_options": "Ödeme seçenekleri",
+            "payment_options_info": "Ödeme seçenekleri hakkında daha fazla bilgi edinin",
+            "price_to": "için"
         },
         "sort": {
             "created_at_asc": "Önce en yaşlı",
@@ -775,7 +775,11 @@
         },
         "language": {
             "prefix": "Senin dilin:"
-        }
+        },
+        "nav_aria_label": "Ana menü",
+        "skip_links": "Doğrudan şuraya git:",
+        "skip_links_aria_label": "Doğrudan şuraya gidin: Ana içerik",
+        "skip_links_content": "Ana içerik"
     },
     "week_days": {
         "0": "Pazartesi",
@@ -1269,7 +1273,8 @@
             "phone": "Telefon numarası:",
             "title": "Sağlayıcı bilgileri",
             "type": "Sağlayıcı türü:",
-            "type_none": "Sağlayıcı türü yok"
+            "type_none": "Sağlayıcı türü yok",
+            "map_icon": "Kuruluş simgesi"
         },
         "funds": {
             "title": "Şubeler"
@@ -2359,11 +2364,13 @@
         "push_notifications_dismiss_time": {
             "bookmarks": {
                 "description": "Favori ürünler eklendikten veya kaldırıldıktan sonra sistem bildirimlerini otomatik olarak gizleyin.",
-                "title": "Favori ürünlerle ilgili bildirimleri otomatik olarak kapatın"
+                "title": "Favori ürünlerle ilgili bildirimleri otomatik olarak kapatın",
+                "label": "Bir eylem gerçekleştirildikten sonra favori ürünlerle ilgili sistem bildirimlerinin kapatılacağı süreyi saniye cinsinden seçin."
             },
             "webshop": {
                 "description": "Bir eylem gerçekleştirildikten sonra sistem bildirimlerini otomatik olarak gizleyin.",
-                "title": "Genel bildirimler otomatik kapanır"
+                "title": "Genel bildirimler otomatik kapanır",
+                "label": "Bir eylem gerçekleştirildikten sonra otomatik sistem bildirimlerinin kapatılacağı süreyi saniye cinsinden seçin."
             }
         },
         "push_notifications_preferences": {
@@ -3321,7 +3328,11 @@
         },
         "me_app_more_info": "Me uygulaması hakkında daha fazla bilgi edinin",
         "provider_sign_up": "Sağlayıcı olarak kaydolun",
-        "sponsor_logo_alt": "Sponsor logosu"
+        "sponsor_logo_alt": "Sponsor logosu",
+        "copyright_aria_label": "Koşullar ve beyanlar",
+        "footer_aria_label": "Altbilgi",
+        "me_app_aria_label": "Me uygulamasını indirme hakkında bilgi",
+        "nav_provider_aria_label": "Sağlayıcı olarak kaydolun"
     },
     "block_funds": {
         "labels": {
@@ -3416,7 +3427,6 @@
             "notifications": "Bildirimler",
             "payouts": "Ödemeler",
             "profile": "Veri",
-            "records": "Kişisel veriler",
             "reimbursements": "Maliyet geri kazanımı",
             "reservations": "Rezervasyonlar",
             "security": "Güvenlik",
@@ -3568,7 +3578,9 @@
             "select_option": "Seçeneği seçin"
         },
         "range_control": {
-            "aria_value": "Değer {{prefix}}{{value}} , minimum değer {{prefix}}{{min}} , maksimum değer {{prefix}}{{max}}"
+            "aria_value": "Değer {{prefix}}{{value}} , minimum değer {{prefix}}{{min}} , maksimum değer {{prefix}}{{max}}",
+            "first_slider_aria_label": "Minimum fiyat için kaydırıcı",
+            "second_slider_aria_label": "Maksimum fiyat için kaydırıcı"
         }
     },
     "modal_deactivate_voucher": {
